[gd_scene load_steps=2 format=3 uid="uid://dupmwlsyjqddu"]

[ext_resource type="Script" path="res://Scripts/multi_slice_game.gd" id="1_tatbu"]

[node name="multiSliceGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_tatbu")

[node name="sliceMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="sliceable" type="TextureRect" parent="sliceMargin"]
layout_mode = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="sliceArea" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="gui_input" from="sliceArea" to="." method="_on_slice_area_gui_input"]
[connection signal="mouse_entered" from="sliceArea" to="." method="_on_slice_area_mouse_entered"]
[connection signal="mouse_exited" from="sliceArea" to="." method="_on_slice_area_mouse_exited"]
